# qrotor_gazebo

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/control/: control_types.hpp  controller.hpp
include/qrotor_gazebo/: common.h  qrotor_plugin.h
models/falcon/: model.sdf
qrotor_gazebo/: CMakeLists.txt  package.xml
qrotor_gazebo/include/control/: control_types.hpp  controllers.hpp  flat2state.hpp
qrotor_gazebo/include/qrotor_gazebo/: control.hpp  qrotor_plugin.h
qrotor_gazebo/launch/: spawn_falcon.launch  spawn_sdf.launch
qrotor_gazebo/msg/: Command.msg
qrotor_gazebo/src/: qrotor_plugin.cpp
qrotor_gazebo/worlds/: simple_world.world
qrotor_gazebo_plugin/: CMakeLists.txt  package.xml
qrotor_gazebo_plugin/include/qrotor_gazebo_plugin/: common.h  control.hpp  qrotor_gazebo_plugin.h
qrotor_gazebo_plugin/launch/: spawn_falcon.launch  spawn_sdf.launch
qrotor_gazebo_plugin/models/drone/: model.config  model.sdf
qrotor_gazebo_plugin/models/falcon/: model.sdf
qrotor_gazebo_plugin/msg/: Command.msg
qrotor_gazebo_plugin/src/: qrotor_gazebo_plugin.cpp
qrotor_offboard/: CMakeLists.txt  package.xml
qrotor_offboard/scripts/: pub_cmd_position.py  pub_cmd_thrust.py  publish_command.py
src/: qrotor_plugin.cpp
